[package]
name = "acdc-converters-markdown"
version = "0.1.0"
edition.workspace = true
description = "Markdown converter with CommonMark and GitHub Flavored Markdown support"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acdc-converters-core.workspace = true
acdc-parser.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
acdc-converters-dev.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tracing-test.workspace = true

[lints]
workspace = true
