[package]
name = "acdc-converters-pdf"
version = "0.1.0"
edition.workspace = true
description = "PDF converter backed by the Rust Typst engine"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["pre-spec-subs"]
pre-spec-subs = ["acdc-parser/pre-spec-subs", "acdc-converters-core/pre-spec-subs"]

[dependencies]
acdc-converters-core.workspace = true
acdc-parser.workspace = true
thiserror.workspace = true
typst = "0.15"
typst-as-lib = { version = "0.16", default-features = false }
typst-assets = { version = "0.15", features = ["fonts"] }
typst-layout = "0.15"
typst-pdf = "0.15"

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
