[package]
name = "acdc-converters-pdf"
version = "0.1.0"
edition.workspace = true
description = "PDF converter backed by the Rust Typst engine"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["pre-spec-subs"]
pre-spec-subs = ["acdc-parser/pre-spec-subs", "acdc-converters-core/pre-spec-subs"]
# Fetch remote http(s) images referenced by the document. Off by default;
# without it remote images are reported as per-image failures.
network = ["acdc-pdf-images/network"]

[dependencies]
acdc-converters-core.workspace = true
acdc-parser.workspace = true
acdc-pdf-images = { path = "crates/images" }
acdc-pdf-render = { path = "crates/render" }
acdc-pdf-theme = { path = "crates/theme" }
acdc-pdf-typst = { path = "crates/typst" }
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
lopdf.workspace = true

[lints]
workspace = true
