[package]
name = "acdc-tck"
description = "TCK mode converter for validation against the `AsciiDoc` TCK suite"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
acdc-converters-common.workspace = true
acdc-core.workspace = true
acdc-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
