[package]
name = "acdc-converters-terminal"
version = "0.1.0"
edition.workspace = true
description = "`cat` like converter for `AsciiDoc` documents"
license = "MIT OR Apache-2.0"

[features]
default = []
images = ["dep:viuer"]
highlighting = ["dep:giallo"]

[dependencies]
acdc-converters-core.workspace = true
acdc-parser.workspace = true
comfy-table = { version = "7.2", features = ["custom_styling"] }
crossterm.workspace = true
thiserror.workspace = true
tracing.workspace = true
# syntax highlighting (optional - saves ~7s compile time when disabled)
giallo = { path = "../../../giallo", optional = true, features = ["dump"] }
# images on the terminal (optional - saves ~16s compile time when disabled)
viuer = { version = "0.11", features = ["print-file"], optional = true }

[dev-dependencies]
acdc-converters-dev.workspace = true
pretty_assertions.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Defensive programming
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
