[package]
name = "acdc-converters-terminal"
version = "0.1.0"
edition.workspace = true
description = "`cat` like converter for `AsciiDoc` documents"
license = "MIT OR Apache-2.0"

[features]
default = []
images = ["dep:viuer"]
highlighting = ["dep:syntect"]

[dependencies]
acdc-converters-core.workspace = true
acdc-parser.workspace = true
comfy-table = { version = "7.2", features = ["custom_styling"] }
crossterm.workspace = true
thiserror.workspace = true
tracing.workspace = true
unicode-width.workspace = true
# syntax highlighting (optional - saves ~7s compile time when disabled)
syntect = { version = "5.3", optional = true }
# images on the terminal (optional - saves ~16s compile time when disabled)
viuer = { version = "0.11", features = ["print-file"], optional = true }

[dev-dependencies]
acdc-converters-dev.workspace = true
libghostty-vt = "0.1.1"
pretty_assertions.workspace = true

[lints]
workspace = true
