[package]
name = "acdc-converters-terminal"
version = "0.1.0"
edition.workspace = true
description = "`cat` like converter for `AsciiDoc` documents"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["pre-spec-subs"]
# Asciidoctor-compatible subs= attribute. Experimental - may be removed when AsciiDoc spec finalizes.
pre-spec-subs = ["acdc-parser/pre-spec-subs", "acdc-converters-core/pre-spec-subs"]
images = ["dep:viuer"]
highlighting = ["dep:syntect"]
render-state = ["dep:libghostty-vt", "dep:asciicast-rs", "dep:serde", "dep:serde_json"]

[dependencies]
acdc-converters-core.workspace = true
acdc-parser.workspace = true
comfy-table = { version = "7.2", features = ["custom_styling"] }
crossterm.workspace = true
thiserror.workspace = true
tracing.workspace = true
unicode-width.workspace = true
libghostty-vt = { version = "0.2.0", optional = true }
# asciicast (.cast) replay parsing (optional - only needed with render-state)
asciicast-rs = { version = "0.3", optional = true }
# peek the asciicast version before picking a streaming reader (render-state only)
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# syntax highlighting (optional - saves ~7s compile time when disabled)
syntect = { version = "5.3", optional = true }
# images on the terminal (optional - saves ~16s compile time when disabled)
viuer = { version = "0.11", features = ["print-file"], optional = true }

[dev-dependencies]
acdc-converters-dev.workspace = true
bumpalo = "3.20"
pretty_assertions.workspace = true
libghostty-vt = "0.2.0"

[lints]
workspace = true
