[package]
name = "acdc-pdf-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compiles Typst markup to PDF bytes. Isolates the Typst compiler."
publish = false

[dependencies]
acdc-pdf-images = { path = "../images" }
acdc-pdf-theme = { path = "../theme" }
thiserror.workspace = true
typst.workspace = true
typst-pdf.workspace = true
typst-layout.workspace = true
typst-as-lib.workspace = true

[dev-dependencies]
lopdf.workspace = true
tempfile.workspace = true

[lints]
workspace = true
